[package]
name = "page-store"
version = "1.0.12"
edition = "2024"
authors = ["George Barwood"]
description = "Management of data pages"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/page-store/"
categories = ["database-implementations"]
include = ["/src"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
atom-file = "1.0.0"
#atom-file = { path = "../atom-file" }

pstd = { version = "0.1.0", optional=true }
rustc-hash = "2.0.0"

[features]
default = ["verify","renumber"]

renumber = []
log = []
verify = []
compact = []
pstd = ["dep:pstd","atom-file/pstd"]
